media/css/firefox/new.less
/* ... */
/* Mobile layout: 320px */
@media only screen and (max-width: @breakTablet) {
    #wrapper {
        width: 320px;
        padding: 0;
    }
    #colophon {
        .primary {
            text-align: left;
            li {
                display: block;
                margin-left: 0;
                a, a:link, a:visited {
                    display: block;
                    border-left: none;
                    border-top: 1px dotted @textColorLight;
                    padding: 10px;
                }
                &:first-child a {
                    border: 0;
                }
            }
        }
    }
    #masthead h2 { display: none; }
    .theater, .stage, .scene {
        height: 310px;
    }
    .version-message-container {
        padding: 0 20px 20px;
        font-size: 18px;
    }
    #main-feature {
        margin: 0;
        padding: 0 10px;
        .row {
            .clearfix;
            width: 300px;
            margin: 0 auto;
        }
        h1.large {
            float: left;
            width: 180px;
            margin-left: 20px;
            font-size: 36px;
            letter-spacing: -1px;
            padding-top: 12px;
            text-align: left;
        }
        img {
            float: left;
            display: block;
        }
    }

    #firefox-screenshot { display: none; }

    #features-download {
        padding-top: 10px;
        .download-button {
            display: block;
        }
    }

    #features {
        margin: 0 auto 20px;
        float: none;
        width: 320px;
        padding-left: 0;
        li {
            width: 85px;
            height: 78px;
            padding: 35px 10px 0;
            font-size: 14px;
            text-align: left;
        }
    }

    .latest-links-wrapper {
        float: none;
        width: auto;
        margin: 0 10px;
        padding: 0;
    }

    // l10n tweaks
    html[lang="it"],
    html[lang="mk"],
    html[lang="my"],
    html[lang="ru"],
    html[lang="uk"] {
        #features {
            margin: 0 auto 20px;
            float: none;
            width: 320px;
            padding-left: 0;
            li {
                width: 95px;
                height: 78px;
                padding: 35px 5px 0;
                font-size: 14px;
                text-align: left;
            }
        }
        .latest-links-wrapper {
            float: none;
            width: auto;
            margin: 0 10px;
            padding: 0;
        }
    }

    html.oldmac,
    html.oldwin {
        .download-button .unsupported-download {
            text-align: left;
            max-width: none;
        }
    }

    html.android {
        .mobile {
            display: none;
        }
        .desktop {
            display: none;
        }

        .download-button-wrapper.android .download-link {
            margin-left: 0;
        }

        .download-button-wrapper {
            float: none;
            text-align: center;
            width: 250px;
            margin: 0 auto;
        }

        &.firefox-latest .android-latest-links-wrapper {
            padding: 0;
        }
    }

    html.fxos {
        .fxos-latest-links-wrapper {
            padding: 0;
        }
    }

    html.ios {
        .stage,
        .theater {
            height: 250px;
        }

        .ios-links-wrapper {
            padding: 0;
        }
    }

    .download-button-wrapper {
        float: none;
        text-align: center;
        .download-button {
            text-align: center;

            small.download-other {
                text-align: center;
                margin-top: 16px;
            }
        }
    }

    .ready-for-scene2 {
        .thankyou {
            margin: 10px 0 0 0;
            font-size: 14px;
            letter-spacing: auto;
        }

        .installation {
            width: 300px;
            margin: 20px 0 0;
            li {
                width: auto;
                margin-bottom: 10px;
                float: none;
                font-style: normal;
                text-align: left;
                padding: 0;
            }
        }
    }
    .osx .ready-for-scene2, .windows .ready-for-scene2, .winIE8 .ready-for-scene2 {
        #install1, #install2, #install3 { background-image: none; }
    }
}

